day-4/manifests/bbr/httproute-bbr-simulator.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bbr-facebook-opt-125m-simulated
  namespace: llm
  labels:
    app.kubernetes.io/part-of: models-as-a-service
    maas.opendatahub.io/day4: bbr-unified-routing
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: maas-default-gateway
      namespace: openshift-ingress
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /v1/chat/completions
          headers:
            - type: Exact
              name: X-Gateway-Model-Name
              value: facebook/opt-125m
      backendRefs:
        - group: ""
          kind: Service
          name: facebook-opt-125m-simulated-kserve-workload-svc
          port: 8000
          weight: 1
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /v1/chat/completions
